--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ Faker==9.8.3
 gunicorn==20.1.0
 Pillow==8.4.0
 psycopg2 @ file:///C:/ci/psycopg2_1612298766762/work
+psycopg2==2.8.6
 pycparser==2.21
 python-dateutil==2.8.2
 python-decouple==3.5
