--- a/requirements.txt
+++ b/requirements.txt
@@ -9,8 +9,7 @@ django-heroku==0.3.1
 Faker==9.8.3
 gunicorn==20.1.0
 Pillow==8.4.0
-ex.psycopg2 @ file:///C:/ci/psycopg2_1612298766762/work
-psycopg2==2.8.6
+psycopg2 @ file:///C:/ci/psycopg2_1612298766762/work
 pycparser==2.21
 python-dateutil==2.8.2
 python-decouple==3.5
